k3s-config/kindeh-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: kindeh-ingress
  namespace: default
  annotations:
    traefik.ingress.kubernetes.io/router.entrypoints: "web,websecure"
    traefik.ingress.kubernetes.io/router.tls: "true"
spec:
  ingressClassName: "traefik"
  rules:
    - host: api.alexandrepaulkouame.net
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: discovery-service
                port:
                  number: 80
